--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,55 @@
 body{
     background-color: lightblue;
 }
+main{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: start;
+}
 #products{
+    border: 1px solid green;
+    width: 80%;
+}
+#about{
+    border: 1px solid blue;
+    width: 20%;
+}
+#products > div{
     display: flex;
     gap: 30px;
     flex-wrap: wrap;
     padding: 50px;
     justify-content: space-evenly;
 }
-#products > article{
+#products > div > article{
     width: 45%;
     border: 1px solid red;
     height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+section{
+    text-align: center;
+}
+.card-img{
+    border: 1px solid yellow;
+    background-color: #393939;
+    width: 80%;
+    height: 80%;
+}
+.card-content{
+    display: flex;
+    gap: 5px;
+    width: 80%;
+    justify-content: space-between;
+}
+
+.btn{
+    background: #009933;
+    color: white;
+    border: 1px solid black;
+    padding: 5px;
 }
